[workspace]
resolver = "2"

members = [
    "moksha-core",
    "moksha-cli",
    "moksha-wallet",
    "moksha-mint",
    "integrationtests",
]

[profile.dev]
split-debuginfo = "packed"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Reduce the number of object files to speed up compilation.

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
codegen-units = 1

[workspace.metadata]
authors = ["The moksha Developers"]
edition = "2021"
description = "moksha is a cashu wallet and mint"
readme = "README.md"
repository = "https://github.com/ngutech21/moksha"
license-file = "LICENSE"
keywords = ["bitcoin", "e-cash"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
allow-dirty = ["ci"]

[workspace.metadata.dist.dependencies.apt]
protobuf-compiler = '*'

[workspace.metadata.dist.dependencies.homebrew]
protobuf = '*'
sqlite = '*'

[workspace.metadata.dist.dependencies.chocolatey]
protoc = '*'
nasm = '*'
activeperl = "*"

[workspace.metadata.dist.github-custom-runners]
x86_64-unknown-linux-gnu = "ubuntu-22.04"

[profile.dev.package]
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
rand_core = { opt-level = 3 }
byteorder = { opt-level = 3 }
zeroize = { opt-level = 3 }
subtle = { opt-level = 3 }
ring = { opt-level = 3 }
sqlx-macros = { opt-level = 3 }
