[workspace]
resolver = "2"

members = [
    "moksha-core",
    "moksha-cli",
    "moksha-wallet",
    "moksha-mint",
    "integrationtests",
]

[profile.dev]
split-debuginfo = "packed"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Reduce the number of object files to speed up compilation.

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
codegen-units = 1

[workspace.metadata]
authors = ["The moksha Developers"]
edition = "2021"
description = "moksha is a cashu wallet and mint"
readme = "README.md"
repository = "https://github.com/ngutech21/moksha"
license-file = "LICENSE"
keywords = ["bitcoin", "e-cash"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
allow-dirty = ["ci"]

[workspace.metadata.dist.dependencies.apt]
protobuf-compiler = '*'

[workspace.metadata.dist.dependencies.homebrew]
protobuf = '*'
sqlite = '*'

[workspace.metadata.dist.dependencies.chocolatey]
protoc = '*'
nasm = '*'
activeperl = "*"

[workspace.metadata.dist.github-custom-runners]
x86_64-unknown-linux-gnu = "ubuntu-22.04"

[workspace.dependencies]
anyhow = "1.0.82"
assert_cmd = "2.0.14"
async-trait = "0.1.80"
axum = "0.7.5"
base64 = "0.22.0"
bip32 = "0.5.1"
bip39 = "2.0.0"
bitcoincore-rpc = "0.18.0"
chrono = "0.4.38"
clap = "4.5.1"
cln-grpc = "0.1.7"
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "5.0.1"
dotenvy = "0.15.7"
fedimint-tonic-lnd = "0.2.0"
hex = "0.4.3"
http-body-util = "0.1.0"
hyper = "1"
indicatif = "0.17.8"
itertools = "0.12.1"
mockall = "0.12.1"
num-format = "0.4.4"
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = "0.22.1"
pretty_assertions = "1.4.0"
qrcode = "0.14.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false }
serde = "1.0.200"
serde_json = "1.0.116"
serde_with = "3.8.1"
sqlx = { version = "0.7.4", default-features = false }
tempfile = "3.10.1"
testcontainers = "0.15.0"
testcontainers-modules = "0.3.6"
thiserror = "1.0.59"
tokio = "1.37.0"
tonic = "0.8"
tower = "0.4.13"
tower-http = "0.5.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"
url = "2.5.0"
utoipa = "4.2.0"
utoipa-swagger-ui = "6.0.0"
uuid = "1.7.0"
secp256k1 = "0.29.0"

[profile.dev.package]
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
rand_core = { opt-level = 3 }
byteorder = { opt-level = 3 }
zeroize = { opt-level = 3 }
subtle = { opt-level = 3 }
ring = { opt-level = 3 }
sqlx-macros = { opt-level = 3 }
