[package]
name = "cashurs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cashurs_core"
path = "src/lib.rs"

[dependencies]
base64 = "0.21.0"
bitcoin_hashes = "0.12.0"
rand = "0.8.5"
secp256k1 = {version="0.27.0", features = [ "rand", "serde" ]}
serde = {version="1.0.160", features = ["derive"]}
serde_json = "1.0.96"
hex = "0.4.3"
serde_with = "2.3.3"
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.71"

