[package]
name = "moksha-integrationtests"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
description = "Integrationtests for moksha"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integrationtests"
path = "tests/tests.rs"

[lib]
name = "lnbitsmock"
path = "src/lnbitsmock.rs"

[dependencies]
rand = "0.8.5"
axum = "0.7.3"
anyhow = { version = "1.0.79", features = ["backtrace"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"
lightning-invoice = "0.29.0"
lightning = "0.0.121"
bitcoin_hashes = { version = "0.12.0", default-features = false }
secp256k1 = { version = "0.27.0", default-features = false, features = ["recovery", "alloc", "rand"] }
tracing = "0.1.40"
testcontainers = "0.15.0"

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { version = "1.35.1", features = ["sync", "rt"] }

[dev-dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", default-features = false }
moksha-mint = { path = "../moksha-mint" }
moksha-wallet = { path = "../moksha-wallet" }
moksha-core = { path = "../moksha-core" }
tempfile = "3.9.0"
