[package]
name = "integrationtests"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
description = "Integrationtests for moksha"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "itests"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
axum = "0.7.4"
anyhow = { version = "1.0.80", features = ["backtrace"] }
serde = { version = "1.0.197", features = ["derive"] }
lightning-invoice = "0.29.0"
bitcoin_hashes = { version = "0.12.0", default-features = false }
secp256k1 = { version = "0.27.0", default-features = false, features = ["recovery", "alloc", "rand"] }
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.4", features = ["postgres"] }
bitcoincore-rpc = "0.18.0"
fedimint-tonic-lnd = { version = "0.2.0", features = ["lightningrpc", "walletrpc"] }
url = "2.5.0"
moksha-mint = { path = "../moksha-mint" }
hex = "0.4.3"
reqwest = { version = "0.12.1", default-features = false }

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { version = "1.35.1", features = ["sync", "rt-multi-thread"] }

[dev-dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.12.1", default-features = false }
moksha-mint = { path = "../moksha-mint" }
moksha-wallet = { path = "../moksha-wallet" }
moksha-core = { path = "../moksha-core" }
tempfile = "3.9.0"
