[package]
name = "integrationtests"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
description = "Integrationtests for moksha"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "itests"
path = "src/lib.rs"

[dependencies]
rand = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
serde = { workspace = true, features = ["derive"] }
lightning-invoice = "0.30.0"
bitcoin = { version = "0.31.2", default-features = false }
secp256k1 = { version = "0.27.0", default-features = false, features = ["recovery", "alloc", "rand"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
bitcoincore-rpc = { workspace = true }
fedimint-tonic-lnd = { workspace = true, features = ["lightningrpc", "walletrpc"] }
url = { workspace = true }
moksha-mint = { path = "../moksha-mint" }
hex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { version = "1.37.0", features = ["sync", "rt-multi-thread"] }

[dev-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
moksha-mint = { path = "../moksha-mint" }
moksha-wallet = { path = "../moksha-wallet" }
moksha-core = { path = "../moksha-core" }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
