[package]
name = "cashurs-mint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
anyhow = "1.0.70"
axum = "0.6.16"
hyper = "0.14.26"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "cors", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"