[package]
name = "cashurs-mint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
async-trait = "0.1.68"
dotenvy = "0.15.7"
bitcoin_hashes = "0.12.0"
anyhow = {version="1.0.71", features = ["backtrace"] }
axum = "0.6.18"
hyper = "0.14.26"
serde = { version = "1.0.162", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "cors", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
secp256k1 = {version="0.27.0", features = [ "rand", "serde" ]}
lnbits_rust = { git = "https://github.com/ngutech21/lnbits_rust/", branch = "main" }
thiserror = "1.0.40"
cashurs-core = { path = "../core" }
rocksdb = "0.20.1"
lightning-invoice = "0.23.0"
mockall = "0.11.4"

[dev-dependencies]
tempfile = "3.5.0"
tower = "0.4.13"
