[package]
name = "moksha-cli"
version = "0.2.0-beta"
edition = "2021"
resolver = "2"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
description = "cashu-cli wallet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "moksha-cli"

[dependencies]
moksha-wallet = { version = "0.2.0-beta", path = "../moksha-wallet" }
moksha-core = { version = "0.2.0-beta", path = "../moksha-core" }
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.4.1"
anyhow = { version = "1.0.75", features = ["backtrace"] }
dialoguer = "0.11.0"
num-format = "0.4.4"
