[package]
name = "moksha-cli"
version = "0.2.1"
edition = "2021"
resolver = "2"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
description = "cashu-cli wallet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "moksha-cli"
path = "src/bin/moksha-cli.rs"

[lib]
name = "mokshacli"
path = "src/lib.rs"

[dependencies]
moksha-wallet = { version = "0.2.1", path = "../moksha-wallet" }
moksha-core = { version = "0.2.1", path = "../moksha-core" }
console = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
url = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
dialoguer = { workspace = true }
num-format = { workspace = true }
qrcode = { workspace = true }
indicatif = { workspace = true }
