[package]
name = "moksha-core"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
description = "A library for building cashu applications"

[lib]
name = "moksha_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
url = "2.4.1"
base64 = "0.21.2"
bitcoin_hashes = "0.12.0"
rand = "0.8.5"
secp256k1 = { version = "0.28.1", features = ["rand", "serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
hex = "0.4.3"
serde_with = "3.4.0"
thiserror = "1.0.50"
itertools = "0.12.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
utoipa = { version = "4.1.0" }

[target.'cfg(target_family = "wasm")'.dependencies]
# getrandom is transitive dependency of rand
# on wasm, we need to enable the js backend
# see https://docs.rs/getrandom/latest/getrandom/#indirect-dependencies and https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2.11", features = ["js"] }

[dev-dependencies]
anyhow = "1.0.75"
