[package]
name = "moksha-core"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
description = "A library for building cashu applications"

[lib]
name = "moksha_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
bitcoin_hashes = "0.16.0"
secp256k1 = { workspace = true, default-features = true, features = [
    "rand",
    "serde",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
utoipa = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
# getrandom is transitive dependency of rand
# on wasm, we need to enable the js backend
# see https://docs.rs/getrandom/latest/getrandom/#indirect-dependencies and https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2.14", features = ["js"] }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
criterion = "0.5.1"

[[bench]]
name = "dhke_benchmarks"
harness = false
