[package]
name = "moksha-fedimint"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
description = "A fedimint client for moksha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moksha_fedimint"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.7"
base64 = "0.20.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
serde_json = "1.0.108"
lightning-invoice = { version = "0.21.0", features = ["serde"] }
fedimint-client = { git = "https://github.com/fedimint/fedimint", rev = "6d833d0a85db07245c627d9bbab0757e41043eb2" }
fedimint-core = { git = "https://github.com/fedimint/fedimint", rev = "6d833d0a85db07245c627d9bbab0757e41043eb2" }
fedimint-mint-client = { git = "https://github.com/fedimint/fedimint", rev = "6d833d0a85db07245c627d9bbab0757e41043eb2" }
fedimint-ln-client = { git = "https://github.com/fedimint/fedimint", rev = "6d833d0a85db07245c627d9bbab0757e41043eb2" }
fedimint-wallet-client = { git = "https://github.com/fedimint/fedimint", rev = "6d833d0a85db07245c627d9bbab0757e41043eb2" }
futures = "0.3.29"

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { version = "1.33.0", features = ["rt"] }
fedimint-rocksdb = { git = "https://github.com/fedimint/fedimint", rev = "6d833d0a85db07245c627d9bbab0757e41043eb2" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4.37"
# getrandom is transitive dependency of rand
# on wasm, we need to enable the js backend
# see https://docs.rs/getrandom/latest/getrandom/#indirect-dependencies and https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2.10", features = ["js"] }
ring = { version = "0.16.20", features = ["wasm32_unknown_unknown_js", "wasm32_c"] }
