[package]
name = "moksha-fedimint"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
description = "A fedimint client for moksha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moksha_fedimint"
path = "src/lib.rs"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[dependencies]
dotenvy = "0.15.7"
base64 = "0.21.5"
anyhow = { version = "1.0.75", features = ["backtrace"] }
serde_json = "1.0.108"
lightning-invoice = { version = "0.21.0", features = ["serde"] }
fedimint-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.1.5" }
fedimint-core = { git = "https://github.com/fedimint/fedimint", tag = "v0.1.5" }
fedimint-mint-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.1.5" }
fedimint-ln-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.1.5" }
fedimint-wallet-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.1.5" }
futures = "0.3.29"

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { version = "1.35.0", features = ["rt", "tracing"] }
fedimint-rocksdb = { git = "https://github.com/fedimint/fedimint", tag = "v0.2.0" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4.37"
# getrandom is transitive dependency of rand
# on wasm, we need to enable the js backend
# see https://docs.rs/getrandom/latest/getrandom/#indirect-dependencies and https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2.11", features = ["js"] }
ring = { version = "0.16.20", features = ["wasm32_unknown_unknown_js", "wasm32_c"] }
