[package]
name = "moksha-mint"
version = "0.2.0-beta"
edition = "2021"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
description = "A cashu-mint written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "moksha-mint"
path = "src/bin/moksha-mint.rs"

[lib]
name = "mokshamint"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.1", features = ["env", "derive"] }
hex = "0.4.3"
async-trait = "0.1.74"
anyhow = { version = "1.0.75", features = ["backtrace"] }
axum = { version = "0.7.3", features = ["http2"] }
hyper = "0.14.28"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs", "set-header"] }
tower-service = { version = "0.3.2" }

secp256k1 = { version = "0.28.1", default-features = false, features = ["rand", "serde"] }
thiserror = "1.0.50"
moksha-core = { path = "../moksha-core", version = "0.2.0-beta" }
lightning-invoice = "0.26.0"
reqwest = { version = "0.11.23", default-features = false, features = ["serde_json", "json", "rustls-tls", "socks"] }
url = "2.4.1"
dotenvy = "0.15.7"
envy = "0.4.2"
fedimint-tonic-lnd = { version = "0.2.0", features = ["lightningrpc", "walletrpc"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
sqlx = { version = "0.7.3", default-features = false, features = ["postgres", "runtime-tokio", "tls-native-tls", "migrate", "macros", "uuid"] }
chrono = "0.4.31"
cln-grpc = "0.1.7"
bitcoin_hashes = "0.13.0"
tonic = { version = "0.8", features = ["transport", "tls"] }
serde_yaml = "0.9.31"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
opentelemetry-jaeger = { version = "0.19.0" }
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
tracing-opentelemetry = "0.20.0"

[dev-dependencies]
tempfile = "3.8.1"
tower = { version = "0.4.13", features = ["util"] }
mockall = "0.12.0"
hex = "0.4.3"
http-body-util = "0.1.0"
