[package]
name = "moksha-mint"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
description = "A cashu-mint written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "moksha-mint"
path = "src/bin/moksha-mint.rs"

[lib]
name = "mokshamint"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true, features = ["env", "derive"] }
hex = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true, features = ["http2"] }
hyper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors", "fs", "set-header"] }

secp256k1 = { version = "0.28.2", default-features = false, features = ["rand", "serde"] }
thiserror = { workspace = true }
moksha-core = { path = "../moksha-core", version = "0.2.1" }
lightning-invoice = "0.26.0"
reqwest = { workspace = true, features = ["json", "rustls-tls", "socks"] }
url = { workspace = true }
dotenvy = { workspace = true }
fedimint-tonic-lnd = { workspace = true, features = ["lightningrpc", "walletrpc"] }
uuid = { workspace = true, features = ["serde", "v4"] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "macros", "uuid"] }
chrono = { workspace = true }
cln-grpc = { workspace = true }
tonic = { workspace = true, features = ["transport", "tls"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["http-proto", "reqwest-client"] }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
mockall = { workspace = true }
hex = { workspace = true }
http-body-util = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
pretty_assertions = { workspace = true }
