[package]
name = "cashurs-wallet"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "cashurs_wallet"
path = "src/lib.rs"

[dependencies]
anyhow = {version="1.0.71", features = ["backtrace"] }
clap = { version = "4.3.0", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = {version= "0.11.18", features = ["serde_json","json"]}
secp256k1 = {version="0.27.0", features = [ "serde" ]}
tokio = { version = "1.28.1", features = ["full"] }
cashurs-core = { path = "../core" }
serde_json = "1.0.96"
serde = "1.0.163"
rand = "0.8.5"
thiserror = "1.0.40"
async-trait = "0.1.68"
rocksdb = "0.21.0"
lightning-invoice = "0.23.0"
iced = {version="0.9.0", features=["image", "tokio","qr_code","debug"]}
iced_aw = { version = "0.5", default-features = false, features = ["tab_bar","tabs", "number_input","modal","card"] }
dyn-clone = "1.0.11"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }


[dev-dependencies]
tempfile = "3.5.0"
