[package]
name = "cashurs-wallet"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "cashurs_wallet"
path = "src/lib.rs"

[dependencies]
anyhow = {version="1.0.71", features = ["backtrace"] }
clap = { version = "4.3.2", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = {version= "0.11.18", features = ["serde_json","json"]}
secp256k1 = {version="0.27.0", features = [ "serde" ]}
tokio = { version = "1.28.2", features = ["full"] }
cashurs-core = { path = "../core" }
serde_json = "1.0.96"
serde = "1.0.163"
rand = "0.8.5"
thiserror = "1.0.40"
async-trait = "0.1.68"
lightning-invoice = "0.23.0"
dyn-clone = "1.0.11"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }


#iced
iced = {version="0.9.0", features=["image", "tokio","qr_code","debug"]}
iced_aw = { version = "0.5", default-features = false, features = ["tab_bar","tabs", "number_input","modal","card"] }


# dioxus
base64 = "0.21.2"
qrcode = "0.12.0"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev="0fec47db725b9c76a95545dd9c444d3a9e627e95"}
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev="0fec47db725b9c76a95545dd9c444d3a9e627e95"}
dioxus-router = {git = "https://github.com/DioxusLabs/dioxus", rev="0fec47db725b9c76a95545dd9c444d3a9e627e95"}
dioxus-std = {git = "https://github.com/DioxusLabs/dioxus-std", features = ["clipboard"], rev="994f1ee99065149492ecd338f8012abdbd2f25bc"}

chrono = { version = "0.4.23", features = ["wasmbind"] }
fermi = {git = "https://github.com/DioxusLabs/dioxus", rev="0fec47db725b9c76a95545dd9c444d3a9e627e95"}

uuid = {version= "1.3.3", features = ["v4","fast-rng","macro-diagnostics"]}
dyn-eq = "0.1.2"



[dev-dependencies]
tempfile = "3.6.0"
