[package]
name = "cashurs-wallet"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "cashurs_wallet"
path = "src/lib.rs"

[dependencies]
anyhow = {version="1.0.71", features = ["backtrace"] }
clap = { version = "4.3.8", features = ["derive"] }
reqwest = {version= "0.11.18", features = ["serde_json","json","rustls-tls"], default-features = false}
secp256k1 = {version="0.27.0", features = [ "serde" ]}
tokio = { version = "1.29.0", features = ["full"] }
cashurs-core = { path = "../core" }
serde_json = "1.0.99"
serde = "1.0.164"
rand = "0.8.5"
thiserror = "1.0.40"
async-trait = "0.1.68"
lightning-invoice = "0.23.0"
dyn-clone = "1.0.11"
sqlx = { version = "0.7.0-alpha.3", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
url = "2.4.0"
dirs = "5.0.1"




[dev-dependencies]
tempfile = "3.6.0"
